--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.12",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "muter": "^0.7.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
